# rozed

./: .gitignore  .rozedignore  Cargo.toml  README.md
crates/rozed-core/: Cargo.toml
crates/rozed-core/src/: config.rs  events.rs  main.rs  mapping.rs  pull.rs  server.rs  sync.rs  watcher.rs
crates/rozed-zed/: Cargo.toml  extension.toml  extension.wasm
crates/rozed-zed/assets/: rozed.luau
crates/rozed-zed/src/: lib.rs
docs/: README.md  architecture.md  roblox-plugin.md  rozed-toml.md  rozedignore.md  zed-extension.md
src/client/: test.client.luau
src/server/: test.server.luau
src/shared/: test.module.luau
