[package]
name = "rozed-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rozed"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "6"
ignore = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
axum-test = "15"
